// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`microsoft-foundry - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Deploy, evaluate, fine-tune, and manage Foundry agents end-to-end with azd: hosted agent scaffold/run/deploy, prompt agent create, batch eval, continuous eval, prompt optimizer, Agent Optimizer scaffold, agent.yaml, dataset curation from traces, model fine-tuning (SFT/DPO/RFT). USE FOR: azd ai agent, azd provision/deploy, deploy agent, hosted agent, create agent, add tool to agent, invoke agent, evaluate agent, continuous eval, continuous monitoring, optimize prompt, improve prompt, optimize agent instructions, agent optimizer, deploy model, Foundry project, RBAC, role assignment, permissions, quota, capacity, region, troubleshoot agent, deployment failure, AI Services, create Foundry resource, provision, knowledge index, customize deployment, onboard, availability, fine-tune, SFT, DPO, RFT, training-data, grader, distillation, fine-tuned model, large file upload. DO NOT USE FOR: Azure Functions, App Service, general Azure deploy (use azure-deploy), general Azure prep (use azure-prepare).",
  "extractedKeywords": [
    "agent",
    "agents",
    "ai",
    "assignment",
    "availability",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "batch",
    "capacity",
    "cli",
    "container",
    "continuous",
    "cosmos",
    "create",
    "curation",
    "customize",
    "dataset",
    "deploy",
    "deployment",
    "distillation",
    "end-to-end",
    "eval",
    "evaluate",
    "failure",
    "file",
    "fine-tune",
    "fine-tuned",
    "fine-tuning",
    "foundry",
    "from",
    "functions",
    "general",
    "grader",
    "hosted",
    "improve",
    "index",
    "instructions",
    "invoke",
    "knowledge",
    "large",
    "manage",
    "mcp",
    "microsoft",
    "model",
    "monitor",
    "monitoring",
    "onboard",
    "optimize",
    "optimizer",
    "permissions",
    "prep",
    "project",
    "prompt",
    "provision",
    "quota",
    "rbac",
    "region",
    "resource",
    "role",
    "scaffold",
    "service",
    "services",
    "storage",
    "tool",
    "traces",
    "training-data",
    "troubleshoot",
    "upload",
    "validation",
    "vnet",
    "with",
    "yaml",
  ],
  "name": "microsoft-foundry",
}
`;

exports[`microsoft-foundry - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "ai",
  "assignment",
  "availability",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "batch",
  "capacity",
  "cli",
  "container",
  "continuous",
  "cosmos",
  "create",
  "curation",
  "customize",
  "dataset",
  "deploy",
  "deployment",
  "distillation",
  "end-to-end",
  "eval",
  "evaluate",
  "failure",
  "file",
  "fine-tune",
  "fine-tuned",
  "fine-tuning",
  "foundry",
  "from",
  "functions",
  "general",
  "grader",
  "hosted",
  "improve",
  "index",
  "instructions",
  "invoke",
  "knowledge",
  "large",
  "manage",
  "mcp",
  "microsoft",
  "model",
  "monitor",
  "monitoring",
  "onboard",
  "optimize",
  "optimizer",
  "permissions",
  "prep",
  "project",
  "prompt",
  "provision",
  "quota",
  "rbac",
  "region",
  "resource",
  "role",
  "scaffold",
  "service",
  "services",
  "storage",
  "tool",
  "traces",
  "training-data",
  "troubleshoot",
  "upload",
  "validation",
  "vnet",
  "with",
  "yaml",
]
`;
